apps/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - hello-world.<tutorial host>
    secretName: hello-world-tls
  rules:
  - host: hello-world.<tutorial host>
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-world
              port:
                number: 80
